avoid browser bar on mobile

--- a/reading/css/main-3.css
+++ b/reading/css/main-3.css
@@ -304,7 +304,7 @@ h1 {
 		z-index: 100;
 		width: 100%;
 		color: #fff;
-		margin-bottom: 2rem;
+		margin-bottom: 6rem;
 		padding: 0 4rem;
 	}
 	header {
